[package]
name = "midi_websocket_server"
version = "0.1.0"
authors = ["kuift kotar <kuiftk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = {version = "0.15.0", default-features = false}
tokio = { version = "1.0.0", default-features = false, features = ["io-util","io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }
midir = "0.7.0"